# level2-3-nlp-finalproject-nlp-08

./: .gitignore  README.md  data.py  docker-compose.yaml  inference.py  package-lock.json  preprocessing.py  train.py
airflow/: .gitignore  README.md  openai_api.py
airflow/artifacts/: userfeedback_train.csv
airflow/dags/: get_new_data.py  upgrade_qg.py
airflow/qgmodel/: QGDataset.py  requirements.txt  test_qg.py  train_qg.py
backend/: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml
backend/src/: database.py  dataclass.py  dependencies.py  main.py  model.py  model_utils.py  models.py  schemas.py
backend/src/routers/: feedbackrouter.py  qgrouter.py
dataset_scripts/: classifier_dataset_formatter.py  dataset_formatter.py  dataset_maker.py  eda.py  evaluate_genre_classifier.py  train_genre_classifier.py  utils.py
frontend/: README.md  dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  index.js  sample_context.txt
frontend/src/components/: CheckAnswerBox.css  CheckAnswerBox.js  FixedTextBox.css  FixedTextBox.js  InputTextBox.css  InputTextBox.js  (+7 more)
kemodel/: keybert.py  keybert_model.py  keyword_extraction.py  preprocessing.py  utils.py
keyword_extraction/: keyword_extraction.py
qgmodel/: README.md  eval_qg.py  lcw99.py  model.py  requirements.txt  test_qg.py  test_qg_summary.py  train_qg.py
qgmodel/dataset/: QGDataset.py  QGDatasetSummary evanlee.py  QGDatasetSummary.py
question_generation/: inference.py
scripts/: dataset_formatter.py  dataset_maker.py  eda.ipynb  eda.py  requirements.txt
(+6 files in other folders)
