[tool.poetry]
name = "nlp-08-fast-api-server"
version = "0.1.0"
description = ""
authors = ["jsdysw <jsdysw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
